// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectedElementContext should inspect the currently selected element: 1: mount 1`] = `
[root]
    <Example>
`;

exports[`InspectedElementContext should inspect the currently selected element: 2: Inspected element 2 1`] = `
{
  "id": 2,
  "owners": null,
  "context": null,
  "events": null,
  "hooks": [
    {
      "id": 0,
      "isStateEditable": true,
      "name": "State",
      "value": 1,
      "subHooks": []
    }
  ],
  "props": {
    "foo": 1,
    "bar": "abc"
  },
  "state": null
}
`;

exports[`InspectedElementContext should not re-render a function with hooks if it did not update since it was last inspected: 1: mount 1`] = `
[root]
  ▾ <Wrapper>
      <Anonymous>
`;

exports[`InspectedElementContext should not re-render a function with hooks if it did not update since it was last inspected: 2: initial render 1`] = `
{
  "id": 3,
  "owners": null,
  "context": null,
  "events": null,
  "hooks": [
    {
      "id": 0,
      "isStateEditable": true,
      "name": "State",
      "value": 0,
      "subHooks": []
    }
  ],
  "props": {
    "foo": 1,
    "bar": "abc"
  },
  "state": null
}
`;

exports[`InspectedElementContext should not re-render a function with hooks if it did not update since it was last inspected: 3: updated state 1`] = `
{
  "id": 3,
  "owners": null,
  "context": null,
  "events": null,
  "hooks": [
    {
      "id": 0,
      "isStateEditable": true,
      "name": "State",
      "value": 0,
      "subHooks": []
    }
  ],
  "props": {
    "foo": 2,
    "bar": "def"
  },
  "state": null
}
`;

exports[`InspectedElementContext should poll for updates for the currently selected element: 1: mount 1`] = `
[root]
    <Example>
`;

exports[`InspectedElementContext should poll for updates for the currently selected element: 2: initial render 1`] = `
{
  "id": 2,
  "owners": null,
  "context": null,
  "events": null,
  "hooks": null,
  "props": {
    "foo": 1,
    "bar": "abc"
  },
  "state": null
}
`;

exports[`InspectedElementContext should poll for updates for the currently selected element: 2: updated state 1`] = `
{
  "id": 2,
  "owners": null,
  "context": null,
  "events": null,
  "hooks": null,
  "props": {
    "foo": 2,
    "bar": "def"
  },
  "state": null
}
`;
